--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,20 @@
 			<version>0.9.1</version>
 		</dependency>
 
+		<!--Validador-->
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.1.5.Final</version>
+		</dependency>
+
+		<!--ModelMapper-->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.9</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
