--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,15 @@ forum.jwt.secret=rm'!@N=Ke!~p8VTA2ZRK~nMDQX5Uvm!m'D&]{@Vr?G;2?XhbC:Qa#9#eMLN\}x3
 forum.jwt.expiration=86400000
 
 mockito.mock-maker-class=mock-maker-inline
+
+# Batch
+# ------------------------------------------------------------------------------------------ #
+# Todos os dias: as 01:00, muda as anotações EXCLUIDA para A_EXPURGAR
+anotacao.batch.schedule.expurgo=0 0 1 ? * *
+
+# Toda sexta-feira as 02:00, exclui de fato o que for A_EXPURGAR de ATÉ uma semana atrás
+anotacao.batch.schedule.exclusao=0 0 2 ? * THU
+
+# Para testar o batch
+# anotacao.batch.schedule.expurgo=0 5 18 ? * *
+# anotacao.batch.schedule.exclusao=0 51 18 ? * FRI
