Alteração no buildspec.yml

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,18 +2,37 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-      java: corretto11
+    commands:
+      - echo installing maven...
+      - apt-get update -y
+      - apt-get install -y maven
   build:
     commands:
-      - echo Build started on `date`
-      - mvn test
-  post_build:
-    commands:
-      - echo Build completed on `date`
-      - mvn package
+      - echo building the application
+      - mvn install
 artifacts:
   files:
-    - target/ap-ms-java-anotacoes-ebd-1.0-SNAPSHOT.jar
+    - target/*.jar
+    - scripts/*.sh
     - appspec.yml
   discard-paths: yes
+cache:
+  paths:
+    - '/root/.m2/**/*'
+#phases:
+#  install:
+#    runtime-versions:
+#      java: corretto11
+#  build:
+#    commands:
+#      - echo Build started on `date`
+#      - mvn test
+#  post_build:
+#    commands:
+#      - echo Build completed on `date`
+#      - mvn package
+#artifacts:
+#  files:
+#    - target/ap-ms-java-anotacoes-ebd-1.0-SNAPSHOT.jar
+#    - appspec.yml
+#  discard-paths: yes
