--- a/appspec.yml
+++ b/appspec.yml
@@ -16,6 +16,6 @@ hooks:
       timeout: 300
       runas: ec2-user
   ApplicationStart:
-    - location: scripts/server_start.sh
+    - location: server_start.sh
       timeout: 300
       runas: ec2-user
