--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
 artifacts:
   files:
     - target/*.jar
-    - scripts
+    - scripts/*.sh
     - appspec.yml
   discard-paths: yes
 cache:
