--- a/appspec.yml
+++ b/appspec.yml
@@ -12,7 +12,7 @@ permissions:
 
 hooks:
   ApplicationStop:
-    - location: scripts/server_stop.sh
+    - location: server_stop.sh
       timeout: 300
       runas: ec2-user
   ApplicationStart:
