--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,8 @@
 		<dependency>
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
+            <version>3.0.8</version>
+            <type>pom</type>
 		</dependency>
 
 	</dependencies>
